# fire-memory

./: .gitignore  README.md  analyze_test_results.py  eval_script.sh  evaluate_hover.py  fire_summeval.sh  plot_embeddings_tsne.py  pyproject.toml  run_eval.py  run_fire.py  run_fire_internal_memory.py  run_fire_rag.py  run_fire_rag_test.py  run_fire_reasoning_rag.py  sh_construct_all.sh  sh_internal_memory_all.sh  sh_test_all.sh  test_serper.py
common/: shared_config.py
datasets/LIAR-New/: data.jsonl
datasets/aggrefact_cnn/: data.jsonl
datasets/averitec/: convert_to_jsonl.py  data.jsonl
datasets/hover/: data.jsonl
datasets/pubhealth/: data.jsonl
datasets/summeval/: data.jsonl
eval/fire/: config.py  verify_atomic_claim.py
rag_db/: hover_gpt-4o-mini.json
results_test/: fire_rag_test_averitec_gpt-4o-mini_r0.0.jsonl  fire_rag_test_averitec_gpt-4o-mini_r0.0_summary.json  fire_rag_test_averitec_gpt-4o-mini_r0.2.jsonl  fire_rag_test_averitec_gpt-4o-mini_r0.2_summary.json  fire_rag_test_averitec_gpt-4o-mini_r0.4.jsonl  fire_rag_test_averitec_gpt-4o-mini_r0.4_summary.json  fire_rag_test_averitec_gpt-4o-mini_r0.6.jsonl  fire_rag_test_averitec_gpt-4o-mini_r0.6_summary.json  fire_rag_test_averitec_gpt-4o-mini_r0.8.jsonl  fire_rag_test_averitec_gpt-4o-mini_r0.8_summary.json
