[project]
name = "fire"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel",email = "shuzhigong@gmail.com"}
]
readme = "README.md"
requires-python = "<3.14, >=3.11"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "langchain-anthropic (>=0.3.20,<0.4.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "termcolor (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
